fix: Bootstrap grid structure to avoid spacing artifacts, Extra whitespace, removed !important and Harden external links opened in new tabs.

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -177,7 +177,7 @@
 }
 
 .max-w-200 {
-  max-width: 200px !important;
+  max-width: 200px;
 }
 
 .footer-links-column {
